// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserRating renders correctly high rating 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 5,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      [
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        [
          {
            "fontFamily": "System",
            "fontSize": 11,
            "fontWeight": "500",
            "letterSpacing": 0.5,
            "lineHeight": 16,
          },
          undefined,
        ],
      ]
    }
  >
    User rating:
  </Text>
  <Text
    collapsable={false}
    numberOfLines={1}
    style={
      {
        "alignSelf": "flex-end",
        "backgroundColor": "#f2007d",
        "borderRadius": 10,
        "color": "rgba(255, 255, 255, 1)",
        "fontSize": 10,
        "height": 20,
        "lineHeight": 10,
        "minWidth": 20,
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 3,
        "textAlign": "center",
        "textAlignVertical": "center",
      }
    }
  >
    9
  </Text>
</View>
`;

exports[`UserRating renders correctly low rating 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 5,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      [
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        [
          {
            "fontFamily": "System",
            "fontSize": 11,
            "fontWeight": "500",
            "letterSpacing": 0.5,
            "lineHeight": 16,
          },
          undefined,
        ],
      ]
    }
  >
    User rating:
  </Text>
  <Text
    collapsable={false}
    numberOfLines={1}
    style={
      {
        "alignSelf": "flex-end",
        "backgroundColor": "#FF0000",
        "borderRadius": 10,
        "color": "rgba(255, 255, 255, 1)",
        "fontSize": 10,
        "height": 20,
        "lineHeight": 10,
        "minWidth": 20,
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 3,
        "textAlign": "center",
        "textAlignVertical": "center",
      }
    }
  >
    1
  </Text>
</View>
`;

exports[`UserRating renders correctly medium rating 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 5,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      [
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "writingDirection": "ltr",
        },
        [
          {
            "fontFamily": "System",
            "fontSize": 11,
            "fontWeight": "500",
            "letterSpacing": 0.5,
            "lineHeight": 16,
          },
          undefined,
        ],
      ]
    }
  >
    User rating:
  </Text>
  <Text
    collapsable={false}
    numberOfLines={1}
    style={
      {
        "alignSelf": "flex-end",
        "backgroundColor": "#faaf00",
        "borderRadius": 10,
        "color": "rgba(255, 255, 255, 1)",
        "fontSize": 10,
        "height": 20,
        "lineHeight": 10,
        "minWidth": 20,
        "opacity": 1,
        "overflow": "hidden",
        "paddingHorizontal": 3,
        "textAlign": "center",
        "textAlignVertical": "center",
      }
    }
  >
    5
  </Text>
</View>
`;
